--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -93,6 +93,14 @@ outlier_tab <- tibble::tibble(
 )
 ```
 
+```{r}
+#| echo: false
+gt(outlier_tab) |>
+  text_transform(
+    locations = cells_body(columns = c("Argument")),
+    fn = function(x) as_code(x)
+  )
+```
 
 +--------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Argument           | Description                                                                                                                                                                                                                                                                                          | Default                                                                                                                                              |
