--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -99,7 +99,8 @@ gt(outlier_tab) |>
   text_transform(
     locations = cells_body(columns = c("Argument")),
     fn = function(x) as_code(x)
-  )
+  ) |> 
+  tab_header("Arguments to the `outlier` spec")
 ```
 
 +--------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------+
