--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -100,7 +100,8 @@ gt(outlier_tab) |>
     locations = cells_body(columns = c("Argument")),
     fn = function(x) as_code(x)
   ) |> 
-  tab_header("Arguments to the `outlier` spec")
+  tab_header("Arguments to the `outlier` spec") |> 
+  tab_options(column_labels.font.weight = "bold")
 ```
 
 +--------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------+
