--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -100,8 +100,9 @@ gt(outlier_tab) |>
     locations = cells_body(columns = c("Argument")),
     fn = function(x) as_code(x)
   ) |> 
+  fmt_markdown(columns = c("Description", "Default")) |>
   tab_header("Arguments to the `outlier` spec") |> 
-  tab_options(column_labels.font.weight = "bold")
+  tab_options(column_labels.font.weight = "bold") 
 ```
 
 +--------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------+
