--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -96,12 +96,15 @@ outlier_tab <- tibble::tibble(
 
 ```{r}
 #| echo: false
+source("_common.R")
 seasonal_table(
   outlier_tab, 
   code_vars = "Argument", 
   md_vars = c("Description", "Default"), 
   title = "Arguments to the `outlier` spec"
-)
+)  |> 
+  gt::as_raw_html() |>
+  writeLines()
 ```
 
 +--------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------+
