--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -103,28 +103,20 @@ This section discusses how to adjust a series for different types of outlier eff
 
 ```{r}
 #| echo: false
+ao <- c(rep(0, 15), 1, rep(0, 15))
+ls <- c(rep(1, 15), rep(0, 16))
+tl <- c(rep(0, 11), rep(1, 10), rep(0, 10))
+tc <- c(rep(0, 10), .75^(0:20))
+so <- c(rep(0, 5), 1, rep(0, 6), 1, rep(0, 6), 1, rep(0, 6), 1, rep(0, 4))
+rp <- c(rep(1, 10), 1 - (0:10)/10  , rep(0, 10))
+qi <- c(rep(1, 5), 1 - (((0:20)/20 - 1)^2 - 1)^2 , rep(0, 5))
+qd <- c(rep(1, 5), ((0:20)/20 - 1)^2, rep(0, 5))
+
 outlier_df <- data.frame(
   x = rep(0:30, 8),
-  y = rep(
-    c(
-      0, 1, 0, 1, 0, 1, 0, 1, 0.779, 0.607, 0.472, 0.368, 0.287, 0.223, 0.174,
-      0.135, 0.105, 0.082, 0.064, 0.05, 0.039, 0.03, 0.024, 0.018, 0.014, 0.011,
-      0.009, 0.007, 0, 0.091, 0.182, 0.273, 0.364, 0.455, 0.545, 0.636, 0.727,
-      0.818, 0.909, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0.003, 0.01, 0.022, 0.04, 0.062,
-      0.09, 0.122, 0.16, 0.202, 0.25, 0.303, 0.36, 0.423, 0.49, 0.562, 0.64, 0.722,
-      0.81, 0.902, 1, 0, 0.25, 0.354, 0.433, 0.5, 0.559, 0.612, 0.661, 0.707, 0.75,
-      0.791, 0.829, 0.866, 0.901, 0.935, 0.968, 1
-    ),
-    rep(
-      c(
-        15L, 1L, 26L, 20L, 11L, 10L, 20L, 1L, 10L, 1L, 11L, 6L, 1L,
-        6L, 1L, 6L, 1L, 6L, 1L, 3L, 1L, 12L, 15L, 1L
-      ),
-      rep(c(1L, 21L, 1L, 10L, 1L, 19L, 1L, 16L), c(7L, 1L, 1L, 1L, 10L, 1L, 2L, 1L))
-    )
-  ),
+  y = c(ao, ls, tl, tc, so, rp, qi, qd),
   type = factor(
-    rep(c("AO", "LS", "TL", "TC", "RP", "SO", "QI", "QD"), each = 31L),
+    rep(c("AO", "LS", "TL", "TC", "SO", "RP", "QI", "QD"), each = 31L),
     levels = c("AO", "LS", "TL", "TC", "SO", "RP", "QI", "QD"),
     labels = c(
       "Additive outlier (AO)",
