improved and extended seasonal breaks

--- a/34-seasonal-breaks.qmd
+++ b/34-seasonal-breaks.qmd
@@ -17,14 +17,29 @@ status("drafting")  # drafting, polishing, complete
 
  -->
 ```
-Some series have seasonal breaks.
-Apart from visual inspection of the unadjusted series, a look at `monthplot()` is usually helpful.
-If there are seasonal breaks, this leads to a jump in the SI-ratio.
+
+The goal of seasonal adjustment is to remove repeating seasonal patterns from time series data. These patterns are predictable and can be modeled in an ARIMA model.
+A *seasonal break* refers to a sudden change in the seasonal pattern of the data. Such a change could be due to various factors, such as:
+
+- A major economic event that alters consumer behavior or business operations, leading to long-lasting change in the seasonal component.
+
+- A change in policy or regulations that affects the seasonal cycle, such as new holiday schedules or school calendars.
+
+- Shifts in consumer preferences that change the way people interact with products or services throughout the year.
+
+- Changes in how the data is measured or surveyed, e.g, changes in the population being surveyed, or revisions to the methodologies used to gather the data.
 
 
-## Case Study: Imports of Goods to China
+Detecting seasonal breaks is important because they can significantly affect the accuracy of the underlying ARIMA model.
 
-We previously used the imports of goods to China, as series that seem to have a pretty obvious seasonal break.
+In the case of the SEATS method, the ARIMA model will affect both the ARIMA forecast and the seasonal adjustment.
+
+In case of the X-11 method, the moving averages are capable of dealing with changes in the seasonal pattern. The shorter the filter, the faster they adapt to an altered sesaonal pattern.
+However, the X-11 method is also susceptible to seasonal breaks, since ARIMA forecast is needed at the margin of the series.
+
+## Identifying a seasonal break
+
+In a previous case study, we analyzed the imports of goods to China, where we detected a pretty obvious seasonal break.
 
 Chinese imports are included as an example series in seasonal, both with and without the official seasonal adjustment.
 
@@ -36,63 +51,166 @@ library(seasonal)
 
 ts_plot(imp_cn)
 ```
-
-The series has a very different seasonal pattern before 2000.
+As can be spotted quickly, the series has a very different seasonal pattern before 2000.
 In our previous example, we simply cut the data and focused on the later period.
 
 ```{r }
-ts_span(imp_cn, start = 2000)
+ts_plot(ts_span(imp_cn, start = 2000))
 ```
 
-Back then, we said that adjusting the whole series in one step is possible, but for good results one should manually model the seasonal break.
-Let's do this now.
-
-### Identifying a seasonal break
-
-In part, the seasonal break is visible in the series.
-It is more straightforward to spot in the monthplot of the series:
+The seasonal break is even clearer to spot in the monthplot of the series:
 
 ```{r }
 monthplot(seas(imp_cn))
 ```
 
 This makes it obvious that there were very strong December effects before 2000.
-We don't know anything about the series, but we can speculate that prior to 2000, custom receipts were counted when they were handed in (at the end of the year), rather than at the date of import.
+We don't know anything about the series, but we can speculate that prior to 2000, custom receipts were counted at the end of the year, rather than at the date of import.
+
+
+
+## Restricting model span
+
+In many cases, restricting `series.modelspan` may be the easiest way to deal with such series.
+
+When restricting the model span, we use only part of the series for model estimation, but still applies seasonal adjustment to the whole series. Thus, the ARIMA model is the same as if we cutted the span of the series before adjustment (as we did in the previous case study):
 
 ```{r }
-plot(seas(imp_cn, regression.variables = "seasonal/2000.jan//"))
+
+m_modelspan <- seas(
+  imp_cn,
+  series.modelspan = "2000.jan,",
+  x11 = list()
+)
+summary(m_modelspan)
+
+m_span <- seas(
+  ts_span(imp_cn, "2000-01"),
+  x11 = list()
+)
+summary(m_span)
 ```
 
-A formal test of a seasonal break can be performed by including `regression.variables = "seasonal/1999.jan//"` into the specification.
+By using the `series.modelspan`, we restrict the data used in the ARIMA model, but we sill adjust the whole series. This leads to almost the same seasonally adjusted series in the overlapping period (after 2000).
+
+```{r }
+ts_plot(
+  final(m_modelspan),
+  final(m_span)
+)
+```
+
+Note that the ARIMA model that has been chosen is not optimal for the period before 2000. This will affect the backcast of the series, and may lead to slighly sub-optimal results for the first year. Since the interest in the accuracy of the latest data is usually much higher, this seems like a good compromise in many cases.
+
+
+## Modelling seasonal breaks
+
+A way to 'model' seaonal breaks to include seasonal dummies before and after the supporsed break. A seasonal dummy model can be estimated by an appropriate specification of the `regression.variables` argument.
+
+To model the span after 2000, we can either cut the time series input (as we did in the case study), or use the `series.span` argument:
+
+``` {r}
+m1 <- seas(
+  imp_cn,
+  outlier = NULL,
+  x11 = "",
+  arima.model = "(0 1 1)",
+  transform.function = "log",
+  regression.variables = "seasonal",
+  series.span = "2000.jan,"
+)
+summary(m1)
+```
+
+In order to model the span before 2000, the specification looks as follows:
+
+``` {r}
+m2 <- seas(
+  imp_cn,
+  outlier = NULL,
+  x11 = "",
+  arima.model = "(0 1 1)",
+  transform.function = "log",
+  regression.variables = "seasonal",
+  series.span = ",1999.dec"
+)
+summary(m2)
+
+```
+
+Note that we set `outlier`, `arima.model` and `transform.function` such that we can ensure comparability.
+
+We can use the `regression.variables` argument to estimate the whole span in one call:
+
+``` {r}
+m3 <- seas(
+  imp_cn,
+  outlier = NULL,
+  x11 = "",
+  arima.model = "(0 1 1)",
+  transform.function = "log",
+  regression.variables = "seasonal/2000.jan/",
+)
+summary(m3)
+```
+
 By default, seasonal outliers are removed from the final series.
 Therefore, this can be used to model a seasonal break.
 Modeling a seasonal break is usually preferable to a separation of the time series in two parts.
 
-### Restricting model span
 
-In many structural breaks, restricting `series.modelspan` may be the easiest way to deal with such series.
-Restricting the model span, uses only part of the series for model estimation, but applies seasonal adjustment to the whole series:
+<!--
+
+TODO Jim: Explain / vs //
+
+we would like to know how we could 'model' a seasonal break
+
+
+-->
+
+## When to model a seasonal break?
+
+
+When should we model a seasonal break? When we have enough data after the break (as in the imports of goods to China example), restricting `series.modelspan` is the easiesiest way and leads to good results.
+
+If you don't, e.g., because the beak on the data is only a few years away from the present, modelling the seasonal break using dummies may be an option.
+
+
+
+## Case Study: Azerbaijani Budget Expenditures
+
+
 
 ```{r }
+library(cbar.sa)
+library(seasonal)
+library(dplyr)
+library(tsbox)
 
-summary(seas(imp_cn, series.modelspan = "2000.jan,"))
-summary(seas(ts_span(imp_cn, "2000-01")))
+
+# visually not obious seasonal break
+ts_plot(budg_exp)
+
+# but monthplot reveals a big jump in hte december effect in 2016
+monthplot(budg_exp)
 
 
-ts_plot(
-  final(seas(imp_cn, series.modelspan = "2000.jan,")),
-  final(seas(ts_span(imp_cn, "2000-01")))
+m2 <- seas(
+  x = budg_exp,
+  x11 = "",
+  series.modelspan = "2016.1,",
+  regression.variables = c("const", "ao2017.4"),
+  arima.model = "(2 0 0)(1 1 1)",
+  regression.aictest = NULL,
+  outlier = NULL,
+  transform.function = "log"
 )
+
 ```
 
-For some reason, this works better with X11 than with SEATS
 
-```{r }
-ts_dygraphs(
-  ts_c(
-    final(seas(imp_cn, series.modelspan = "2000.jan,", x11 = "")),
-    final(seas(ts_span(imp_cn, "2000-01"), x11 = "")),
-    final(seas(imp_cn, regression.variables = "seasonal/2000.jan//"))
-  )
-)
-```
+
+
+
+
+
