--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,29 @@
+@article{dagum1994,
+ ISSN = {03067734, 17515823},
+ URL = {http://www.jstor.org/stable/1403767},
+ abstract = {The Denton method is widely used by statistical agencies to benchmark time series (i.e. to adjust them to annual benchmarks). This method does not take into account: (a) the presence of bias, and (b) the presence of autocorrelation and heteroscedasticity in the survey errors. This paper introduces a regression benchmarking method which incorporates (a) and (b) and calculates the relative efficiency with respect to the Denton method, under the assumption of various types of ARMA processes for the survey errors. The results are illustrated with the Canadian Retail Trade series. /// La méthode de Denton est très utilisée par les instituts de statistique pour étalonner les chroniques (c.-à-d. pour les ajuster aux jalons annuels). Cette méthode ne tient pas compte (a) de la présence de biais et (b) de la présence d'autocorrélation et d'hétéroscédasticité dans les erreurs d'échantillonnage. Ce document présente une méthode d'étalonnage basée sur la régression, qui incorpore (a) et (b) et calcule l'efficience relative par rapport à la méthode de Denton, sous l'hypothèse que les erreurs d'échantillonnage suivent divers types de processus ARMA. Les résultats sont illustrés au moyen de la série du Commerce au Détail Canadien.},
+ author = {Pierre A. Cholette and Estela Bee Dagum},
+ journal = {International Statistical Review / Revue Internationale de Statistique},
+ number = {3},
+ pages = {365--377},
+ publisher = {[Wiley, International Statistical Institute (ISI)]},
+ title = {Benchmarking Time Series with Autocorrelated Survey Errors},
+ urldate = {2024-03-05},
+ volume = {62},
+ year = {1994}
+}
+
+
+@article{denton1971,
+  title={Adjustment of monthly or quarterly series to annual totals: an approach based on quadratic minimization},
+  author={Denton, Frank T},
+  journal={Journal of the american statistical association},
+  volume={66},
+  number={333},
+  pages={99--102},
+  year={1971},
+  publisher={Taylor \& Francis}
+}
 @book{box1970time,
   title={Time Series Analysis: Forecasting and Control},
   author={Box, George E. P. and Jenkins, Gwilym M.},
